# python-nameparser

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.rst  pyproject.toml  setup.py  tests.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  usage.rst
nameparser/: __init__.py  parser.py  util.py
nameparser/config/: __init__.py  capitalization.py  conjunctions.py  prefixes.py  regexes.py  suffixes.py  titles.py
